--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portofolio</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header></header>
+    <header id="header" class="flex">
+        <div class="logo mt-2 ml-2 mb-2 shader-xs">
+        </div>
+            <nav id="navbar" class="flex">  
+                <a class="border rounded p-1" href="">Home</a>
+                <a class="border rounded p-1" href="">About Me</a>
+                <a class="border rounded p-1" href="">Form</a>
+            </nav>
+    </header>
 
-    <main></main>
+    <main>
+        <div class="flex">
+            <h2 class="">Welcome aboard Captain</h2>
+        </div>
+    </main>
 
 
 
-    <footer></footer>
+    <footer>
+
+    </footer>
 
     <script src="JS/script.js"></script>
 </body>
